--- a/package.json
+++ b/package.json
@@ -1,35 +1,28 @@
 {
-  "name": "clementinejs-fcc",
-  "version": "1.0.1",
-  "description": "The elegant and lightweight boilerplate for full stack JavaScript.",
+  "name": "timestamp",
+  "version": "0.0.1",
+  "description": "Timestamp microservice for Free Code Camp",
   "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/johnstonbl01/clementinejs-fcc"
+    "url": "https://github.com/madisonrawles/timestamp.git"
   },
-  "homepage": "http://www.clementinejs.com/",
-  "bugs": "https://github.com/johnstonbl01/clementinejs-fcc/issues",
   "keywords": [
-    "MongoDB",
-    "Mongoose",
-    "full stack",
-    "Express",
-    "Node",
-    "javascript",
-    "boilerplate"
+    "API",
+    "NODE"
   ],
-  "scripts": {
-    "start": "node server.js"
+  "author": "Madison Rawles",
+  "license": "none",
+  "bugs": {
+    "url": "https://github.com/madisonrawles/timestamp/issues"
   },
-  "author": "Blake Johnston",
-  "license": "MIT",
+  "homepage": "https://github.com/madisonrawles/timestamp/",
   "dependencies": {
-    "dotenv": "^1.2.0",
+    "body-parser": "^1.14.2",
     "express": "^4.13.3",
-    "express-session": "^1.11.3",
-    "moment": "^2.11.1",
-    "mongoose": "^4.1.0",
-    "passport": "^0.3.0",
-    "passport-github": "^1.0.0"
+    "moment": "^2.10.6"
   }
 }
